--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,4 +1,6 @@
 <app-header class="header"></app-header>
 <app-aside class="aside">aside</app-aside>
-
-<app-movie-list class="page"></app-movie-list>
+<div class="page">
+  <router-outlet>
+  </router-outlet>
+</div>
