--- a/src/app/pages/movie-card-page/movie-card-page.html
+++ b/src/app/pages/movie-card-page/movie-card-page.html
@@ -5,4 +5,14 @@
   <div class="movie-card__image"><img [src]="movieEl[0].poster" [alt]="movieEl[0].title"></div>
   <div class="movie-card__info">date: {{movieEl[0].year}}</div>
   <div class="movie-card__info-text">{{movieEl[0].description}}</div>
+  <div class="movie-card__buttons">
+    <button class="movie-card__buttons-favorites" matFab extended>
+      <span class="material-icons">favorite_border</span>
+      add to favorites
+    </button>
+    <button class="movie-card__buttons-watch-list" matFab extended>
+      <mat-icon>bookmark_border</mat-icon>
+      add to watch list
+    </button>
+  </div>
 </div>
