test-delete-ssr

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,6 +1,5 @@
-<app-header class="header"></app-header>
 <app-aside class="aside">aside</app-aside>
+<app-header class="header"></app-header>
 <div class="page">
-  <router-outlet>
-  </router-outlet>
+  <router-outlet></router-outlet>
 </div>
