--- a/src/app/components/aside/aside.html
+++ b/src/app/components/aside/aside.html
@@ -1,13 +1,13 @@
 <div class="aside__wrapper">
-  <div class="aside__logo logo-aside">
+  <a routerLink="movieList" class="aside__logo logo-aside">
     <div class="logo-aside__image"><img src="assets/images/movie-logo.svg" alt=""></div>
     <div class="logo-aside__text">MOVIE</div>
-  </div>
+  </a>
   <ul class="aside__list">
-    <li class="aside__item">Not plaing</li>
-    <li class="aside__item">Popular</li>
-    <li class="aside__item">Top Rate</li>
-    <li class="aside__item">Upcoming</li>
+    <li routerLink="notPlaing" class="aside__item">Not plaing</li>
+    <li routerLink="popular" class="aside__item">Popular</li>
+    <li routerLink="topRate" class="aside__item">Top Rate</li>
+    <li routerLink="upcoming" class="aside__item">Upcoming</li>
 
   </ul>
 </div>
