--- a/src/app/components/header/header.scss
+++ b/src/app/components/header/header.scss
@@ -31,3 +31,9 @@
     cursor: pointer;
   }
 }
+:host {
+  width: 100%;
+  .mat-badge-medium.mat-badge-overlap .mat-badge-content {
+    margin: -12px 0 -12px 0;
+  }
+}
