--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,4 +1,5 @@
 <app-aside class="aside">aside</app-aside>
+<app-header class="header">header</app-header>
 <div class="page">
   <router-outlet></router-outlet>
 </div>
