--- a/src/app/components/header/header.html
+++ b/src/app/components/header/header.html
@@ -2,23 +2,13 @@
   <div class="header__row">
     <nav class="header__nav nav-header">
       <ul class="nav-header__list">
-        <!-- <li class="nav-header__item">
-          <a [routerLink]="[{ outlets: { rout2: ['favorite'] } }]" [matBadge]="favoriteListIds.length"
 
-            class="demo-section">My
-            favorites</a>
-        </li>
         <li class="nav-header__item">
-          <a [routerLink]="[{ outlets: { rout2: ['watch-list'] } }]" [matBadge]="watchListIds.length"
-            class="demo-section">WatchList
-          </a>
-        </li> -->
-        <li class="nav-header__item">
-          <div (click)="favoriteListOpen()" class="demo-section" [matBadge]="favoriteListIds.length">My
+          <div class="demo-section" [matBadge]="1" (click)="showCount()">My
             favorites</div>
         </li>
         <li class="nav-header__item">
-          <div (click)="movieListOpen()" class="demo-section" [matBadge]="watchListIds.length">WatchList
+          <div class="demo-section" [matBadge]="4">WatchList
           </div>
         </li>
       </ul>
