--- a/css/app.css
+++ b/css/app.css
@@ -1,10 +1,25 @@
 :host {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+  display: grid;
+  grid-template-areas: "aside header" "aside page";
+  grid-template-columns: 250px 1fr;
+  grid-template-rows: 60px 1fr;
 }
 
 .aside {
-  -ms-flex-preferred-size: 300px;
-      flex-basis: 300px;
+  grid-area: aside;
+}
+
+.header {
+  grid-area: header;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 50px;
+}
+
+.page {
+  grid-area: page;
 }
