--- a/src/app/components/header/header.html
+++ b/src/app/components/header/header.html
@@ -4,7 +4,7 @@
       <ul class="nav-header__list">
 
         <li class="nav-header__item">
-          <div class="demo-section" [matBadge]="1" (click)="showCount()">My
+          <div class="demo-section" [matBadge]="1">My
             favorites</div>
         </li>
         <li class="nav-header__item">
