--- a/src/app/pages/movie-card-page/movie-card-page.html
+++ b/src/app/pages/movie-card-page/movie-card-page.html
@@ -2,9 +2,10 @@
   <div class="movie-card__top top-movie-card">
     <h2 class="top-movie-card__title">{{movie.title}}</h2>
   </div>
-  <div class="movie-card__image"><img [src]="movie.poster" [alt]="movie.title"></div>
-  <div class="movie-card__info">date: {{movie.year}}</div>
-  <div class="movie-card__info-text">{{movie.description}}</div>
+  <div class="movie-card__image"><img [src]="'https://image.tmdb.org/t/p/w500' + movie.poster_path" [alt]="movie.title">
+  </div>
+  <div class="movie-card__info">date: {{movie.release_date}}</div>
+  <div class="movie-card__info-text">{{movie.overview}}</div>
   <div class="movie-card__buttons">
     <button class="movie-card__buttons-favorites" matFab extended (click)="addToFavorite(movie.id)">
       <span class="material-icons">favorite_border</span>
