--- a/src/app/components/aside/aside.html
+++ b/src/app/components/aside/aside.html
@@ -4,10 +4,10 @@
     <div class="logo-aside__text">MOVIE</div>
   </a>
   <ul class="aside__list">
-    <li routerLink="notPlaing" class="aside__item">Not plaing</li>
-    <li routerLink="popular" class="aside__item">Popular</li>
-    <li routerLink="topRate" class="aside__item">Top Rate</li>
-    <li routerLink="upcoming" class="aside__item">Upcoming</li>
+    <li routerLink="nowPlaing" class="aside__item" routerLinkActive="active-link">Now plaing</li>
+    <li routerLink="popular" class="aside__item" routerLinkActive="active-link">Popular</li>
+    <li routerLink="topRate" class="aside__item" routerLinkActive="active-link">Top Rate</li>
+    <li routerLink="upcoming" class="aside__item" routerLinkActive="active-link">Upcoming</li>
 
   </ul>
 </div>
