--- a/src/app/pages/top-rate-page/top-rate-page.html
+++ b/src/app/pages/top-rate-page/top-rate-page.html
@@ -1,1 +1,6 @@
-<p>top-rate-page works!</p>
+@if (movies$ | async; as data) {
+@for (movieEl of data.results; track $index) {
+<app-movie-card [movie]="movieEl">
+</app-movie-card>
+}
+}
