--- a/src/app/pages/movie-list-page/movie-list-page.html
+++ b/src/app/pages/movie-list-page/movie-list-page.html
@@ -1,6 +1,12 @@
-@if (movies$ | async; as data) {
+<!-- @if (movies$ | async; as data) {
 @for (movieEl of data.results; track $index) {
 <app-movie-card [movie]="movieEl">
 </app-movie-card>
 }
+} -->
+<!-- @if (movies | async; as data) { -->
+@for (movieEl of movieList; track $index) {
+<app-movie-card [movie]="movieEl">
+</app-movie-card>
 }
+<!-- } -->
