--- a/css/app.css
+++ b/css/app.css
@@ -3,6 +3,7 @@
   grid-template-areas: "aside header" "aside page";
   grid-template-columns: 250px 1fr;
   grid-template-rows: 60px 1fr;
+  margin: 0 auto;
 }
 
 .aside {
