--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -5,6 +5,7 @@
     'aside page';
   grid-template-columns: 250px 1fr;
   grid-template-rows: 60px 1fr;
+  margin: 0 auto;
 }
 .aside {
   grid-area: aside;
