--- a/src/app/components/movie-card/movie-card.html
+++ b/src/app/components/movie-card/movie-card.html
@@ -3,12 +3,12 @@
     <h4 class="top-block__title">{{movie.title | transformLenght}}</h4>
     <button class="top-block__menu" matButton [matMenuTriggerFor]="menu"><mat-icon>menu</mat-icon></button>
     <mat-menu #menu="matMenu">
-      <button mat-menu-item (click)="addToFavorite(movie.id)">add to favorite</button>
-      <button mat-menu-item (click)="addToWatchList(movie.id)">add to watchList</button>
+      <button mat-menu-item (click)="addToFavorite(movie)">add to favorite</button>
+      <button mat-menu-item (click)="addToWatchList(movie)">add to watchList</button>
     </mat-menu>
   </div>
 
-  <a [routerLink]="['/movieCard']" [queryParams]="{id: `${movie.id}`}">
+  <a [routerLink]="['/movieCard']" (click)="routeToMovie(movie)">
     <div class="block__image">
       <img [src]="'https://image.tmdb.org/t/p/w500' + movie.poster_path" [alt]="movie.title">
     </div>
