--- a/src/styles.scss
+++ b/src/styles.scss
@@ -41,9 +41,9 @@ body {
   height: 100%;
 }
 body {
-  margin: 0;
+  margin: 0 auto;
   font-family: Roboto, 'Helvetica Neue', sans-serif;
-  max-width: 1300px;
+  max-width: 1400px;
   padding-left: 15px;
   padding-right: 15px;
   background-color: rgb(158, 153, 153);
