test ngrx store add movie,remove movie in favList and watchLst

--- a/src/app/components/header/header.html
+++ b/src/app/components/header/header.html
@@ -8,7 +8,7 @@
             favorites</a>
         </li>
         <li class="nav-header__item">
-          <a routerLink="watchList" class="demo-section" [matBadge]="3">WatchList
+          <a routerLink="watchList" class="demo-section" [matBadge]="countWatchList$ | async">WatchList
           </a>
         </li>
       </ul>
