--- a/src/app/pages/now-plaing-page/now-plaing-page.html
+++ b/src/app/pages/now-plaing-page/now-plaing-page.html
@@ -1,4 +1,8 @@
-@if (movies$ | async; as data) {
-<app-movie-card *ngFor="let movie of data.results" [movie]="movie">
+@if (movies$ | async; as movies) {
+@for (movie of movies; track $index) {
+<app-movie-card [movie]="movie">
 </app-movie-card>
+
+
+}
 }
