test ngrx store

--- a/src/app/pages/top-rate-page/top-rate-page.html
+++ b/src/app/pages/top-rate-page/top-rate-page.html
@@ -1,5 +1,5 @@
 @if (movies$ | async; as data) {
-@for (movieEl of data.results; track $index) {
+@for (movieEl of data; track $index) {
 <app-movie-card [movie]="movieEl">
 </app-movie-card>
 }
